# ChangeLog for app-emacs/emacs-daemon
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*emacs-daemon-9999 (03 Nov 2008)

  03 Nov 2008; Ulrich Mueller <ulm@gentoo.org> +emacs-daemon-9999.ebuild:
  Add live SVN version.

*emacs-daemon-0.4 (02 Nov 2008)

  02 Nov 2008; Ulrich Mueller <ulm@gentoo.org> -emacs-daemon-0.3.ebuild,
  +emacs-daemon-0.4.ebuild:
  Version bump. Rename rc file and /var/run directory from emacs-daemon to
  emacs, after discussing it with opfer. Add keepdir for /var/run/emacs.
  Inherit elisp instead of elisp-common and add empty src_compile.

*emacs-daemon-0.3 (02 Nov 2008)

  02 Nov 2008; Ulrich Mueller <ulm@gentoo.org> -files/emacs-daemon.rc,
  -emacs-daemon-0.2.ebuild, +emacs-daemon-0.3.ebuild:
  Write process id to file. Use proper distfile.

*emacs-daemon-0.2 (29 Oct 2008)

  29 Oct 2008; Ulrich Mueller <ulm@gentoo.org> -files/emacs-daemon.conf,
  files/emacs-daemon.rc, -emacs-daemon-0.1.ebuild, +emacs-daemon-0.2.ebuild:
  Support symlinked multiple instances of the rc script, so that an
  individual user can have his Emacs daemon restarted, without affecting
  others. Thanks to Flameeyes for the suggestion.

*emacs-daemon-0.1 (29 Oct 2008)

  29 Oct 2008; Ulrich Mueller <ulm@gentoo.org> +files/emacs-daemon.conf,
  +files/emacs-daemon.rc, +metadata.xml, +emacs-daemon-0.1.ebuild:
  Initial import.
