@@ -1,5 +1,7 @@
 DIST emacs-daemon-0.4.tar.bz2 1255 RMD160 9df33b9220f3453761304a7f032e113055d0a7fb SHA1 8856e6b4ffed1d20cdf396396a2240745efbf8c1 SHA256 dc3036abf112149f7d79eed8a30e4476ba4ad3a285d19f76445422e3b7d63573
+DIST emacs-daemon-0.5.tar.bz2 1959 RMD160 f36860720369dc9c7dfdd71919e971960b6d3127 SHA1 051bbefa28646fd7903bc7dc6903aae0f07250f5 SHA256 94ff07be508c471b8935813981e1d210eb36cfdb455fc6da3a6d5d6b1311545a
 EBUILD emacs-daemon-0.4.ebuild 969 RMD160 70047f2fed15dd4604dd96e9274a34d7c4c1078c SHA1 0d3e1db893a13cb726c7c29c1599087631371c83 SHA256 e9bc592d6d2cf87fe1496b7e055e64a4105534e8acd9d7cfd2f25b2bbbc7a474
-EBUILD emacs-daemon-9999.ebuild 984 RMD160 6c18e06afec6a81dce6209e75619d20337a61170 SHA1 5b19a338715c79adbd2673de1cec8ce171394593 SHA256 3c2c99617ba8cdd732f72207e02504c9947b109f57545ba3e89281f6722f67ff
-MISC ChangeLog 1381 RMD160 7d60278900d285b57ef77029fe4d328962c44a7b SHA1 512e89c353dd6ded7f55de615ad6b80ef6bfd27b SHA256 62e93d1db832a95336064dca918d66d678a01c9fc27c9cb8adad6592d78372a4
+EBUILD emacs-daemon-0.5.ebuild 1003 RMD160 4ef62fe32fb10989e7ed80670ee5dcb82eefc132 SHA1 3d7065aaeaaf229fa744d48fd0b28a282c49d881 SHA256 3aa8a72a714417db43082d75461e75c5d13184e811fedc90338add4d39fdb2c0
+EBUILD emacs-daemon-9999.ebuild 1018 RMD160 e5e41bda1816938d79e7903da53c02ce81fa24cc SHA1 cec8ad22d1fb70d5f1ae15374f57fce58135743a SHA256 cf4eae18147f98ff797f650f4816ae278572b7cbafca9a56c085c43b4ebc3be6
+MISC ChangeLog 1532 RMD160 ca672d43608fc85f6d16f6f66b075b7148cec2cc SHA1 afc565eb60363803c38116b91bd5cc09cc57215d SHA256 77dfcc8517bffc0ff1135b1fccdbce59f72c6547a392eb6f2b696015f8ca3265
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
