@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*emacs-daemon-0.5 (10 Nov 2008)
+
+  10 Nov 2008; Ulrich Mueller <ulm@gentoo.org> +emacs-daemon-0.5.ebuild,
+  emacs-daemon-9999.ebuild:
+  Version bump.
+
 *emacs-daemon-9999 (03 Nov 2008)
 
   03 Nov 2008; Ulrich Mueller <ulm@gentoo.org> +emacs-daemon-9999.ebuild:
